agregue una foto

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Grupo 53</h1>
+    <img src="https://www.pexels.com/es-es/foto/carretera-calle-vehiculo-lujo-7942890/" alt="">
 </body>
 </html>
