le agregue un width a la imagen

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Grupo 53</h1>
-    <img src="https://images.pexels.com/photos/4967937/pexels-photo-4967937.jpeg" alt="">
+    <img width="300px" src="https://images.pexels.com/photos/4967937/pexels-photo-4967937.jpeg" alt="">
 </body>
 </html>
